syntax = "proto3";
package zetachain.zetacore.authority;

import "zetachain/zetacore/authority/policies.proto";
import "zetachain/zetacore/authority/chain_info.proto";
import "zetachain/zetacore/authority/authorization.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/zeta-chain/node/x/authority/types";

// Query defines the gRPC querier service.
service Query {
  // Queries Policies
  rpc Policies(QueryGetPoliciesRequest) returns (QueryGetPoliciesResponse) {
    option (google.api.http).get = "/zeta-chain/authority/policies";
  }

  // Queries ChainInfo
  rpc ChainInfo(QueryGetChainInfoRequest) returns (QueryGetChainInfoResponse) {
    option (google.api.http).get = "/zeta-chain/authority/chainInfo";
  }

  rpc AuthorizationList(QueryAuthorizationListRequest)
      returns (QueryAuthorizationListResponse) {
    option (google.api.http).get = "/zeta-chain/authority/authorizations";
  }

  rpc Authorization(QueryAuthorizationRequest)
      returns (QueryAuthorizationResponse) {
    option (google.api.http).get =
        "/zeta-chain/authority/authorization/{msg_url}";
  }
}

// QueryAuthorizationListRequest is the request type for the
// Query/AuthorizationList RPC method.
message QueryAuthorizationListRequest {}
// QueryAuthorizationListResponse is the response type for the
// Query/AuthorizationList RPC
message QueryAuthorizationListResponse {
  AuthorizationList authorization_list = 1 [ (gogoproto.nullable) = false ];
}

// QueryAuthorizationRequest is the request type for the Query/Authorization RPC
// method.
message QueryAuthorizationRequest { string msg_url = 1; }

// QueryAuthorizationResponse is the response type for the Query/Authorization
// RPC method.
message QueryAuthorizationResponse {
  Authorization authorization = 1 [ (gogoproto.nullable) = false ];
}

// QueryGetPoliciesRequest is the request type for the Query/Policies RPC
// method.
message QueryGetPoliciesRequest {}

// QueryGetPoliciesResponse is the response type for the Query/Policies RPC
// method.
message QueryGetPoliciesResponse {
  Policies policies = 1 [ (gogoproto.nullable) = false ];
}

// QueryGetChainInfoRequest is the request type for the Query/ChainInfo RPC
// method.
message QueryGetChainInfoRequest {}

// QueryGetChainInfoResponse is the response type for the Query/ChainInfo RPC
// method.
message QueryGetChainInfoResponse {
  ChainInfo chain_info = 1 [ (gogoproto.nullable) = false ];
}